# estimate_pi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
etc/: driver.sh  plot.py
src/: estimate_pi.cpp  main.cpp
